--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MyPlace</string>
     <string name="search_hint">Search for a place</string>
+    <string name="no_internet">No internet</string>
 </resources>
